# QT_Lessons

./: .gitignore  README.md
qt1/: CMakeLists.txt
qt1/src/: main.cpp
qt1/src/components/: MainWindow.cpp  MainWindow.h
qt1/src/components/CentralWidget/: CentralWidget.cpp  CentralWidget.h
qt1/src/components/ControlPanel/: ControlPanel.cpp  ControlPanel.h
qt1/src/components/Range/: Range.cpp  Range.h
qt1/src/components/ResultView/: ResultView.cpp  ResultView.h
